Fix layout issue

--- a/sass/_pages.scss
+++ b/sass/_pages.scss
@@ -41,9 +41,7 @@
     flex: 1 1 0%;
     height: 100%;
   }
-}
 
-.weapon-details-page {
   #weapon_details {
     display: flex;
     flex-direction: column;
